# my_modbus_tauri_project

./: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
src/: app.html  parameter_manager.js  parameter_manager.mjs  parameter_manager.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
src/routes/components/: Configs.svelte  ModbusView.svelte  Tab1.svelte  Tab2.svelte  Tab3.svelte  TheTabs.svelte
