[package]
name = "my_modbus_tauri_project"
version = "0.1.1"
description = "A Tauri App"
authors = ["Perevyazko Mikhail"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_modbus_tauri_project_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9.34-deprecated" }
rmodbus_client = { git = "http://programmers.ont.cheaz.ru:3000/ONT.soft/rmodbus_client.git", version = "1.2.1" }
log = "0.4"
tauri-plugin-log = "2.0.0-rc"
chrono = "0.4.40"
log4rs = "1.3.0"
anyhow = "1.0.97"


[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
